--- a/calculator/calc.html
+++ b/calculator/calc.html
@@ -15,6 +15,7 @@
    border: 1px solid #666;
   } </style>
     <script type="text/javascript" src="taskcalc.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
     <div>
